<resources>
    <string name="app_name">inThisPlace</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="display_in_grid">Display in grid</string>
    <string name="pref_display_grid">pref_display_grid</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="on_the_web">On The Web</string>
    <string name="dispaly_all">Dispaly All</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="logout">Logout</string>
    <string name="subscribe_to_inthisplace">Subscribe to InThisPlace</string>
    <string name="unsubscribe_in_this_place">UnSubscribe In This Place</string>

    <string-array
        name="categories">
        <item>Capernaum</item>
        <item>Mount of beatitudes</item>
        <item>Jerusalem</item>
        <item>Tabgha</item>
        <item>Holy Land Picture</item>
        <item>Sea of Galilee</item>
    </string-array>


</resources>
