<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_signin"
        android:title="@string/sign_in"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:title="Settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/onWeb"
        android:title="@string/on_the_web"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/display_all"
        android:title="@string/dispaly_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/category"
        android:title="@string/choose_a_category"
        app:showAsAction="ifRoom" />






</menu>